# server.js
@@ -2,7 +2,7 @@ const express = require('express');
 const bodyParser = require('body-parser');
 const dotenv = require('dotenv');
 const connectDB = require('./config/db');
-const reservationRoutes = require('./routes/reservations');
+const reservationRoutes = require('./routes/reservas');
 
 dotenv.config();
 const app = express();
@@ -13,7 +13,7 @@ const startServer = async () => {
 
     app.use(bodyParser.json());
 
-    app.use('/api/reservations', reservationRoutes);
+    app.use('/api/reservas', reservationRoutes);
 
     app.listen(PORT, () => {
         console.log(`Server is running on http://localhost:${PORT}`);
